# asmr-e

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
SME/: __init__.py  dataset.py  evaluation.py  features.py  json_converter.py  launcher_dir.py  output_generator_dir.py  plots.py  results_converter.py  run_llm_SaT.py  run_llm_pdf.py  run_llm_rag.py  semanticizer_basic.py  utils.py
SME/modeling/: predict.py  train.py
SME/templates/: human_extraction.j2  human_verify.j2  system_extraction.j2  system_verify.j2
docs/: mkdocs.yml
docs/docs/: index.md
references/somesci/: attributes_compatibility_mapping.json  attributes_compatibility_mapping_sequence_labeling.json
references/somesci/test_results/: create_test_results.py
references/test_results/: create_test_results.py
references/test_results_intent/: create_test_results.py
reports/figures/: Results.md  results.md
